# lang-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: test.ipynb
src/: download_raw_data.py
